---------------------------------------------------------------------------------------------------
Version: 1.3.13
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 1.3.12
Date: 2022-11-15

  Bugfixes:
    - Fix GUI sometimes being too wide for the screen when using Compact mode. 
      Also, the GUI will now try to fit within 90% of the screen width instead of trying to use as much of the screen as possible.

  Locale:
    - Locale updates for 1.3.10 strings.

---------------------------------------------------------------------------------------------------
Version: 1.3.11
Date: 2022-11-09

  Bugfixes:
    - Fix settings page Add/Delete buttons that were still enabled after deleting selected milestones, which could cause a crash.

---------------------------------------------------------------------------------------------------
Version: 1.3.10
Date: 2022-11-06

  Changes:
    - Update Nullius preset to account for boxed versions of milestones in the "Resources" group (ingots, processors, glass).
    - GUI improvements:
      - Milestones from different groups are now aligned properly.
      - Improved the look of the scroll bars that appear when using large milestones set.
      - In the settings page, you can now add milestones directly at a specific position.
      - In the settings page, you can now delete multiple milestones at the same time.
      - In the settings page, you can now shift-click arrows to move 5 places at a time.

  Bugfixes:
    - Fix estimations not being shown when the "List by group" setting was disabled.

---------------------------------------------------------------------------------------------------
Version: 1.3.9
Date: 2022-10-19

  Changes:
    - Update PyMods presets to account for changes in the latest PyMods versions. 
      Now comes with 4 presets depending on how many PyMods you are using: Full, Full except AE, Medium, and Short.