@@ -34,9 +34,9 @@ presets = {
             {type="item",       name="spidertron",              quantity=1},
 
             {type="group",      name="Power"},
-            {type="item",       name="uranium-fuel-cell",       quantity=1},
             {type="item",       name="solar-panel",             quantity=1},
             {type="item",       name="solar-panel",             quantity=1000, next="x10"},
+            {type="item",       name="nuclear-reactor",         quantity=1},
 
             {type="group",      name="Kills"},
             {type="kill",       name="medium-biter",            quantity=1},
@@ -1132,6 +1132,168 @@ presets = {
             {type="item",       name="solar-panel",             quantity=1},
             {type="item",       name="solar-array",             quantity=1},
             {type="item",       name="uranium-fuel-cell",       quantity=1},
+
+            {type="group",      name="Kills"},
+            {type="kill",       name="medium-biter",            quantity=1},
+            {type="kill",       name="big-biter",               quantity=1},
+            {type="kill",       name="behemoth-biter",          quantity=1},
+            {type="kill",       name="behemoth-biter",          quantity=1000, next="x10"},
+            {type="kill",       name="character",               quantity=1, next="x5"},
+        }
+    },
+
+    ["Industrial Revolution 3"] = {
+        required_mods = {"IndustrialRevolution3"},
+        milestones = {
+            {type="group",      name="Science"},
+            {type="item",       name="automation-science-pack", quantity=1},
+            {type="item",       name="logistic-science-pack",   quantity=1},
+            {type="item",       name="military-science-pack",   quantity=1},
+            {type="item",       name="chemical-science-pack",   quantity=1},
+            {type="item",       name="production-science-pack", quantity=1},
+            {type="item",       name="utility-science-pack",    quantity=1},
+            {type="item",       name="space-science-pack",      quantity=1},
+            {type="item",       name="automation-science-pack", quantity=1000, next="x10"},
+            {type="item",       name="logistic-science-pack",   quantity=1000, next="x10"},
+            {type="item",       name="military-science-pack",   quantity=1000, next="x10"},
+            {type="item",       name="chemical-science-pack",   quantity=1000, next="x10"},
+            {type="item",       name="production-science-pack", quantity=1000, next="x10"},
+            {type="item",       name="utility-science-pack",    quantity=1000, next="x10"},
+            {type="item",       name="space-science-pack",      quantity=10000, next="x10"},
+
+            {type="group",      name="Resources"},
+            {type="item",       name="copper-ingot",            quantity=1},
+            {type="item",       name="tin-ingot",               quantity=1},
+            {type="item",       name="glass",                   quantity=1},
+            {type="item",       name="bronze-ingot",            quantity=1},
+            {type="item",       name="iron-ingot",              quantity=1},
+            {type="item",       name="concrete",                quantity=1},
+            {type="item",       name="plastic-bar",             quantity=1},
+            {type="item",       name="gold-ingot",              quantity=1},
+            {type="item",       name="nickel-ingot",            quantity=1},
+            {type="item",       name="lead-ingot",              quantity=1},
+            {type="item",       name="chromium-ingot",          quantity=1},
+            {type="item",       name="platinum-ingot",          quantity=1},
+            {type="item",       name="brass-ingot",             quantity=1},
+            {type="item",       name="steel-ingot",             quantity=1},
+            {type="item",       name="electronic-circuit",      quantity=1},
+            {type="item",       name="computer-mk1",            quantity=1},
+            {type="item",       name="advanced-circuit",        quantity=1},
+            {type="item",       name="computer-mk2",            quantity=1},
+            {type="item",       name="processing-unit",         quantity=1},
+            {type="item",       name="computer-mk3",            quantity=1},
+
+            {type="group",      name="Progress"},
+            {type="item",       name="steambot",                quantity=1},
+            {type="item",       name="construction-robot",      quantity=1},
+            {type="item",       name="monowheel",               quantity=1},
+            {type="item",       name="heavy-roller",            quantity=1},
+            {type="item",       name="car",                     quantity=1},
+            {type="item",       name="tank",                    quantity=1},
+            {type="item",       name="locomotive",              quantity=1},
+            {type="item",       name="spidertron",              quantity=1},
+            {type="item",       name="chrome-transmat",         quantity=1},
+            {type="technology", name="rocket-silo",             quantity=1},
+            {type="item",       name="rocket-part",             quantity=100},
+
+            {type="group",      name="Power"},
+            {type="item",       name="steam-engine",            quantity=1},
+            {type="item",       name="steel-generator",         quantity=1},
+            {type="item",       name="solar-panel",             quantity=1},
+            {type="item",       name="solar-array",             quantity=1},
+            {type="item",       name="uranium-fuel-cell",       quantity=1},
+
+            {type="group",      name="Kills"},
+            {type="kill",       name="medium-biter",            quantity=1},
+            {type="kill",       name="big-biter",               quantity=1},
+            {type="kill",       name="behemoth-biter",          quantity=1},
+            {type="kill",       name="behemoth-biter",          quantity=1000, next="x10"},
+            {type="kill",       name="character",               quantity=1, next="x5"},
+        }
+    },
+
+    ["Industrial Revolution 3 + Special Projects"] = {
+        required_mods = {"IndustrialRevolution3", "IndustrialRevolution3Projects"},
+        milestones = {
+            {type="group",      name="Science"},
+            {type="item",       name="automation-science-pack", quantity=1},
+            {type="item",       name="logistic-science-pack",   quantity=1},
+            {type="item",       name="military-science-pack",   quantity=1},
+            {type="item",       name="chemical-science-pack",   quantity=1},
+            {type="item",       name="production-science-pack", quantity=1},
+            {type="item",       name="utility-science-pack",    quantity=1},
+            {type="item",       name="space-science-pack",      quantity=1},
+            {type="item",       name="automation-science-pack", quantity=1000, next="x10"},
+            {type="item",       name="logistic-science-pack",   quantity=1000, next="x10"},
+            {type="item",       name="military-science-pack",   quantity=1000, next="x10"},
+            {type="item",       name="chemical-science-pack",   quantity=1000, next="x10"},
+            {type="item",       name="production-science-pack", quantity=1000, next="x10"},
+            {type="item",       name="utility-science-pack",    quantity=1000, next="x10"},
+            {type="item",       name="space-science-pack",      quantity=10000, next="x10"},
+
+            {type="group",      name="Special Projects"},
+            {type="item",       name="carbon-special-analysis",   quantity=1},
+            {type="item",       name="carbon-special-analysis",   quantity=2650},
+            {type="item",       name="gold-special-analysis",     quantity=1},
+            {type="item",       name="gold-special-analysis",     quantity=250},
+            {type="item",       name="lead-special-analysis",     quantity=1},
+            {type="item",       name="lead-special-analysis",     quantity=400},
+            {type="item",       name="nickel-special-analysis",   quantity=1},
+            {type="item",       name="nickel-special-analysis",   quantity=500},
+            {type="item",       name="diamond-special-analysis",  quantity=1},
+            {type="item",       name="diamond-special-analysis",  quantity=50},
+            {type="item",       name="ruby-special-analysis",     quantity=1},
+            {type="item",       name="ruby-special-analysis",     quantity=100},
+            {type="item",       name="electrum-special-analysis", quantity=1},
+            {type="item",       name="electrum-special-analysis", quantity=1000},
+            {type="item",       name="helium-special-analysis",   quantity=1},
+            {type="item",       name="helium-special-analysis",   quantity=120},
+            {type="item",       name="hydrogen-special-analysis", quantity=1},
+            {type="item",       name="hydrogen-special-analysis", quantity=1250},
+            {type="item",       name="uranium-special-analysis",  quantity=1},
+            {type="item",       name="uranium-special-analysis",  quantity=1200},
+
+            {type="group",      name="Resources"},
+            {type="item",       name="copper-ingot",            quantity=1},
+            {type="item",       name="tin-ingot",               quantity=1},
+            {type="item",       name="glass",                   quantity=1},
+            {type="item",       name="bronze-ingot",            quantity=1},
+            {type="item",       name="iron-ingot",              quantity=1},
+            {type="item",       name="concrete",                quantity=1},
+            {type="item",       name="plastic-bar",             quantity=1},
+            {type="item",       name="gold-ingot",              quantity=1},
+            {type="item",       name="nickel-ingot",            quantity=1},
+            {type="item",       name="lead-ingot",              quantity=1},
+            {type="item",       name="chromium-ingot",          quantity=1},
+            {type="item",       name="platinum-ingot",          quantity=1},
+            {type="item",       name="brass-ingot",             quantity=1},
+            {type="item",       name="steel-ingot",             quantity=1},
+            {type="item",       name="electronic-circuit",      quantity=1},
+            {type="item",       name="computer-mk1",            quantity=1},
+            {type="item",       name="advanced-circuit",        quantity=1},
+            {type="item",       name="computer-mk2",            quantity=1},
+            {type="item",       name="processing-unit",         quantity=1},
+            {type="item",       name="computer-mk3",            quantity=1},
+
+            {type="group",      name="Progress"},
+            {type="item",       name="steambot",                quantity=1},
+            {type="item",       name="construction-robot",      quantity=1},
+            {type="item",       name="monowheel",               quantity=1},
+            {type="item",       name="heavy-roller",            quantity=1},
+            {type="item",       name="car",                     quantity=1},
+            {type="item",       name="tank",                    quantity=1},
+            {type="item",       name="locomotive",              quantity=1},
+            {type="item",       name="spidertron",              quantity=1},
+            {type="item",       name="chrome-transmat",         quantity=1},
+            {type="technology", name="rocket-silo",             quantity=1},
+            {type="item",       name="rocket-part",             quantity=100},
+
+            {type="group",      name="Power"},
+            {type="item",       name="steam-engine",            quantity=1},
+            {type="item",       name="steel-generator",         quantity=1},
+            {type="item",       name="solar-panel",             quantity=1},
+            {type="item",       name="solar-array",             quantity=1},
+            {type="item",       name="nuclear-reactor",         quantity=1},
 
             {type="group",      name="Kills"},
             {type="kill",       name="medium-biter",            quantity=1},
