@@ -1,7 +1,10 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.13
 Date: ????
+
   Changes:
+    - Add presets for Industrial Revolution 3, with or without the "Special Projects" add-on.
+
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.12
 Date: 2022-11-15
